# android-keyboard

./: .gitignore  .gitlab-ci.yml  .gitmodules  Android.bp  Android.mk  CleanSpec.mk  FLEKSY_AUTOCORRECT_HISTORY_NOTES.md  FTL_LICENSE.md  LICENSE.md  Localllamaboard_spec.md  NOTICE  OWNERS  README.md  SWIPE_LLM_INVESTIGATION.md  build.gradle  gradle.properties  lint.xml  proguard-rules.pro  sendZulipMessage.sh  setUpKeysCI.sh  setUpPropertiesCI.sh  settings.gradle  syncTranslations.sh  uploadNightly.sh  uploadNightlyBranch.sh
native/jni/: Android.bp  Android.mk  CMakeLists.txt  CleanupNativeFileList.mk  HostUnitTests.mk  NativeFileList.cmake  NativeFileList.mk  TargetUnitTests.mk  com_android_inputmethod_keyboard_ProximityInfo.cpp  com_android_inputmethod_keyboard_ProximityInfo.h  com_android_inputmethod_latin_BinaryDictionary.cpp  com_android_inputmethod_latin_BinaryDictionary.h  com_android_inputmethod_latin_BinaryDictionaryUtils.cpp  com_android_inputmethod_latin_DicTraverseSession.cpp  com_android_inputmethod_latin_DicTraverseSession.h  com_android_inputmethod_latin_NativeUtils.cpp  com_android_inputmethod_latin_NativeUtils.h  com_android_inputmethod_latin_makedict_BinaryDictDecoder.cpp  com_android_inputmethod_latin_makedict_BinaryDictDecoder.h  com_android_inputmethod_latin_makedict_BinaryDictInputOutput.cpp  com_android_inputmethod_latin_makedict_BinaryDictInputOutput.h  com_android_inputmethod_latin_makedict_Ver3DictDecoder.cpp  com_android_inputmethod_latin_makedict_Ver3DictDecoder.h  jni_common.cpp  jni_common.h  onload.cpp  org_futo_inputmethod_keyboard_ProximityInfo.cpp  org_futo_inputmethod_keyboard_ProximityInfo.h  org_futo_inputmethod_latin_BinaryDictionary.cpp  org_futo_inputmethod_latin_BinaryDictionary.h  org_futo_inputmethod_latin_BinaryDictionaryUtils.cpp  org_futo_inputmethod_latin_BinaryDictionaryUtils.h  org_futo_inputmethod_latin_DicTraverseSession.cpp  org_futo_inputmethod_latin_DicTraverseSession.h  org_futo_inputmethod_latin_GGMLDictionary.cpp  org_futo_inputmethod_latin_GGMLDictionary.h  org_futo_inputmethod_latin_xlm_AdapterTrainer.cpp  org_futo_inputmethod_latin_xlm_AdapterTrainer.h  org_futo_inputmethod_latin_xlm_LanguageModel.cpp  org_futo_inputmethod_latin_xlm_LanguageModel.h  (+5 more)
native/jni/src/: additional_proximity_chars.cpp  additional_proximity_chars.h  basechars.cpp  bigram_dictionary.cpp  bigram_dictionary.h  binary_format.h  bloom_filter.h  char_utils.cpp  char_utils.h  correction.cpp  correction.h  debug.h  defines.h  dic_traverse_wrapper.cpp  dic_traverse_wrapper.h  dictionary.cpp  dictionary.h  digraph_utils.cpp  digraph_utils.h  geometry_utils.h  hash_map_compat.h  jni_utils.cpp  jni_utils.h  multi_bigram_map.h  proximity_info.cpp  proximity_info.h  proximity_info_params.cpp  proximity_info_params.h  proximity_info_state.cpp  proximity_info_state.h  proximity_info_state_utils.cpp  proximity_info_state_utils.h  proximity_info_utils.h  suggest_options.h  suggest_utils.h  terminal_attributes.h  unigram_dictionary.cpp  unigram_dictionary.h  words_priority_queue.cpp  words_priority_queue.h  (+1 more)
native/jni/src/dictionary/interface/: dictionary_structure_with_buffer_policy.h
native/jni/src/dictionary/structure/: dictionary_structure_with_buffer_policy_factory.cpp
native/jni/src/dictionary/structure/pt_common/: dynamic_pt_reading_helper.cpp  dynamic_pt_reading_helper.h
native/jni/src/dictionary/structure/v2/: patricia_trie_policy.cpp  patricia_trie_policy.h  ver2_pt_node_array_reader.cpp
native/jni/src/dictionary/structure/v4/: ver4_patricia_trie_policy.cpp  ver4_patricia_trie_policy.h
native/jni/src/dictionary/utils/: binary_dictionary_bigrams_iterator.h  binary_dictionary_shortcut_iterator.h
native/jni/src/gesture/: build_check.cpp  gesture_decoder.h  gesture_decoder_wrapper.cpp  gesture_decoder_wrapper.h  incremental_decoder.h  incremental_decoder_impl.h  incremental_decoder_interface.cpp  incremental_decoder_interface.h  incremental_decoder_wrapper.cpp  incremental_decoder_wrapper.h  typing_decoder_wrapper.cpp  typing_decoder_wrapper.h
native/jni/src/gesture/impl/: gesture_decoder_impl.cpp  gesture_decoder_impl.h  incremental_decoder_impl.cpp  incremental_decoder_impl.h  token_beam_impl.cpp  token_beam_impl.h  token_impl.cpp  token_impl.h
native/jni/src/gesture/impl/header/: nothing.h
native/jni/src/ggml/: LanguageModel.cpp  LanguageModel.h  ModelMeta.cpp  ModelMeta.h  common.cpp  common.h  context.cpp  context.h  finetune.cpp  finetune.h  ggml-alloc.c  ggml-alloc.h  ggml-backend-impl.h  ggml-backend.c  ggml-backend.h  ggml-impl.h  ggml-quants.c  ggml.c  ggml.h  gpt_neox.cpp  gpt_neox.h  k_quants.c  llama.cpp  llama.h  model_adapter.cpp  model_adapter.h  neox_v3.cpp  otherarch.h  train.cpp  train.h  unicode.h  utils.cpp  utils.h  whisper.cpp  whisper.h
native/jni/src/obsolete/: correction.cpp  correction.h  correction_state.h  unigram_dictionary.cpp  words_priority_queue.cpp  words_priority_queue.h  words_priority_queue_pool.h
native/jni/src/sentencepiece/: config.h  init.h  sentencepiece_processor.h  util.cc
native/jni/src/suggest/: gesture_suggest.cpp  gesture_suggest.h  suggest_interface.h  typing_suggest.cpp  typing_suggest.h
native/jni/src/suggest/core/: suggest.cpp  suggest.h  suggest_interface.h  suggest_options.h
native/jni/src/suggest/core/dicnode/: dic_node.cpp  dic_node.h  dic_node_priority_queue.h  dic_node_profiler.h  dic_node_properties.h  dic_node_proximity_filter.h  dic_node_release_listener.h  dic_node_state.h  dic_node_state_input.h  dic_node_state_output.h  dic_node_state_prevword.h  dic_node_state_scoring.h  dic_node_utils.cpp  dic_node_utils.h  dic_node_vector.h  dic_nodes_cache.cpp  dic_nodes_cache.h
native/jni/src/utils/: autocorrection_threshold_utils.cpp  byte_array_view.h  char_utils.cpp  char_utils.h  exclusive_ownership_pointer.h  hash_map_compat.h  int_array_view.h  jni_data_utils.cpp  jni_data_utils.h  log_utils.cpp  log_utils.h  ngram_utils.h
native/jni/tests/dictionary/utils/: trie_map_test.cpp
native/jni/tests/utils/: int_array_view_test.cpp
(+5246 files in other folders)
